--- a/src/locales/hi/translationHi.json
+++ b/src/locales/hi/translationHi.json
@@ -4,7 +4,7 @@
 
   "navLinkHome": "घर",
   "navLinkLearn": "सीखना",
-  "navLinkChat": "Chatroom",
+  "navLinkChat": "बातचीत",
   "navLinkFunZone": "मज़ेदार क्षेत्र",
   "navLinkContact": "संपर्क करें",
   "navChangeLang": "भाषा बदलो",
