--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -57,7 +57,10 @@
   "SolarSystemExploreUranusDesc": "Uranus is the seventh planet from the Sun. Its name is a reference to the Greek god of the sky, Uranus, who, according to Greek mythology, was the great-grandfather of Ares (Mars), grandfather of Zeus (Jupiter) and father of Cronus (Saturn).",
   "SolarSystemExploreNeptune": "Neptune",
   "SolarSystemExploreNeptuneDesc": "Neptune is the eighth and farthest known Solar planet from the Sun. In the Solar System, it is the fourth-largest planet by diameter, the third-most-massive planet, and the densest giant planet. It is 17 times the mass of Earth, slightly more massive than its near-twin Uranus.",
-  "SolarSystemExploreClick": "Clink on the sun or the planets for more information",
+  "SolarSystemExploreClick": "Click on the sun or the planets for more information",
+
+  "chatroomLogo": "Chatroom",
+  "charroomDesc": "Ask your doubs and share your learning",
 
   "funZoneTitle": "Fun Zone",
   "funZoneDesc": "Take a break and have some fun",
