--- a/src/locales/ja/translationJa.json
+++ b/src/locales/ja/translationJa.json
@@ -1,4 +1,82 @@
 {
   "langName": "Japanese",
-  "navDropLang": "日本"
+  "navDropLang": "日本",
+
+  "navLinkHome": "家",
+  "navLinkLearn": "学び",
+  "navLinkChat": "チャットルーム",
+  "navLinkFunZone": "ファンゾーン",
+  "navLinkContact": "コンタクト",
+  "navChangeLang": "言語を変更",
+  "navSiteDetail": "学生向けのARベースのWebプラットフォーム",
+
+  "homeAbout": "SkillCeptはARベースのWebプラットフォームであり、あらゆるバックグラウンドの学生が3Dモデルを使用してサイトにアクセスし、さまざまな概念を学ぶことができます。これにより、理解がより簡単かつ迅速になります。 SkillCeptは、視覚化と主題への完全な没頭を通じて、学生がより良い結果を達成するのに役立ちます",
+  "homeExplore": "探検",
+  "homeOtherFeat": "その他の機能",
+  "home3D": "インタラクティブな3Dモデル",
+  "home3Ddetails": "デジタル3Dモデルにより、学生はさまざまなトピックを視覚化して調査することができます。それらは空間スキルを強化し、フィールドで事前に学習されたさまざまな原則の学生の認識を促進し、学生が自分のプロセスと特性について考えることを奨励します。",
+  "homeAR": "拡張現実で学ぶ",
+  "homeARDetails": "拡張現実の現実世界内のデジタルオブジェクトの相対的なシームレス性は、双方向性とエンゲージメントを促進します。これにより、学生がカリキュラムの科目を学習する時間を最大限に活用しながら、新しいテクノロジーの使用方法を学習する時間を最小限に抑えることができます。",
+  "homeMultiLang": "複数の言語で利用可能",
+  "homeMultiLangDetails": "このプラットフォームは、文化的認識の創造と認識、学術的および教育的価値の追加、創造性の向上、社会の適応、および現地の言語の認識のために、複数の言語で利用できます。",
+
+  "learnCLassTitle": "クラスを選択してください",
+
+  "modelView": "ARで3Dモデルを表示するには、QRコードをスキャンするか、下のボタンをクリックしてください。",
+  "modelViewInAR": "ARで表示",
+  "modelEarthTitle": "地球",
+  "modelEarthDetails": "地球は太陽から3番目の惑星であり、生命を宿し、支えることが知られている唯一の天体です。地球の表面の約29.2％は、大陸と島からなる土地です。残りの70.8％は、主に海、海、湾、その他の塩水域で覆われていますが、湖、川、その他の淡水で覆われており、これらが一緒になって水圏を構成しています。地球の極地の多くは氷に覆われています。地球の外層は、何百万年にもわたって表面を横切って移動するいくつかの硬い構造プレートに分割されていますが、その内部は、固体の鉄の内核、地球の磁場を生成する液体の外核、およびプレートを駆動する対流マントルでアクティブなままですテクトニクス。",
+  "modelSolarSystemTitle": "太陽系",
+  "modelSolarSyatemDetails": "太陽系は、太陽と、太陽を直接または間接的に周回する物体の重力によって束縛されたシステムです。太陽を直接周回する天体のうち、最大のものは8つの惑星で、残りは準惑星と太陽系小天体です。太陽を間接的に周回する物体（自然衛星）のうち、2つは最小の惑星である水星よりも大きいです。太陽系は、46億年前に巨大な星間分子雲の重力崩壊から形成されました。システムの質量の大部分は太陽にあり、残りの質量の大部分は木星に含まれています。水星、金星、地球、火星の4つの小さな内部系惑星は地球型惑星であり、主に岩石と金属で構成されています。",
+  "modelWaterTitle": "水 (H2O)",
+  "modelWaterDetails": "水（化学式H2O）は、無機、透明、無味、無臭、ほぼ無色の化学物質であり、地球の水圏とすべての既知の生物の液体（溶媒として機能）の主成分です。それはカロリーや有機栄養素を提供しませんが、それはすべての既知の生命体にとって不可欠です。その化学式H2Oは、その分子のそれぞれが共有結合によって接続された1つの酸素原子と2つの水素原子を含むことを示しています。水素原子は104.45°の角度で酸素原子に結合しています。水は、温度と圧力の標準状態でのH2Oの液体状態の名前です。",
+  "modelChemGlassTitle": "化学実験装置",
+  "modelChemGLaddDetails": "試験管は、培養管またはサンプル管とも呼ばれ、指のような長さのガラスまたは透明なプラスチックチューブで構成され、上部が開いて下部が閉じている一般的な実験用ガラス器具です。試験管は通常、専用のラックに配置されます。実験装置では、ビーカーは一般に底が平らな円筒形の容器です。写真に示すように、ほとんどの場合、注ぐのを助けるための小さな注ぎ口（またはくちばし）もあります。",
+  "modelDiscoverySpaceShuttleTitle": "スペースシャトルディスカバリー",
+  "modelDiscoverySpaceShuttleDetails": "スペースシャトルディスカバリー（オービター車両指定：OV-103）は、NASAのスペースシャトルプログラムのオービターの1つであり、5つの完全に機能するオービターの3番目に構築されます。その最初のミッションであるSTS-41-Dは、1984年8月30日から9月5日まで飛行しました。27年間のサービスで39回打ち上げ、着陸し、これまでの他のどの宇宙船よりも多くの宇宙飛行を集約しました。スペースシャトルロケットには、スペースシャトルオービター、使い捨て中央燃料タンク、および2つの再利用可能な固体ロケットブースターの3つの主要コンポーネントがあります。",
+  "modelPerseverance": "忍耐力",
+  "modelPerseveranceDetails": "火星の忍耐力ローバーミッションは、NASAの火星探査プログラムの一部です。これは、赤い惑星のロボット探査の長期的な取り組みです。火星忍耐力ミッションは、火星での生命の可能性に関する重要な質問を含む、火星探査の優先度の高い科学目標に取り組んでいます。ミッションは、古代の火星の居住可能な状態の兆候を探すだけでなく、過去の微生物の生命自体の兆候を探すことによって、次のステップを踏み出します。火星のパーサヴィアランスローバーは、最も有望な岩や土壌のコアサンプルを収集し、火星の表面のキャッシュにそれらを置くことができるドリルを導入します。",
+  "modelSpaceStationTitle": "国際宇宙ステーション",
+  "modelSpaceStationDetails": "国際宇宙ステーション（ISS）は、低軌道にあるモジュール式の宇宙ステーション（居住可能な人工衛星）です。これは、NASA（米国）、ロスコスモス（ロシア）、JAXA（日本）、ESA（ヨーロッパ）、CSA（カナダ）の5つの宇宙機関が参加する多国籍共同プロジェクトです。宇宙ステーションの所有権と使用は、政府間条約と協定によって確立されます。このステーションは、宇宙生物学、天文学、気象学、物理学などの分野で科学研究が行われている微小重力および宇宙環境研究所として機能します。",
+
+  "SolarSystemExploreSun": "太陽",
+  "SolarSystemExploreSunDesc": "太陽は太陽系の中心にある星です。それは、核融合反応によって白熱に加熱された高温プラズマのほぼ完全な球体であり、主に可視光、紫外線、および赤外線としてエネルギーを放射します。それは地球上の生命にとって断然最も重要なエネルギー源です。",
+  "SolarSystemExploreMercury": "水星",
+  "SolarSystemExploreMercuryDesc": "水星は太陽系で最小の惑星であり、太陽に最も近い惑星です。太陽の周りの軌道は87.97地球日かかり、これは太陽のすべての惑星の中で最も短いものです。ローマの神メルクリウス（メルクリウス）、商売の神、神々の使者、そして神々と人間の間の仲介者にちなんで名付けられ、ギリシャの神ヘルメス（Ἑρμῆς）に対応しています。",
+  "SolarSystemExploreVenus": "金星",
+  "SolarSystemExploreVenusDesc": "金星は太陽から2番目の惑星です。ローマの愛と美の女神にちなんで名付けられました。月の後の地球の夜空で最も明るい自然物として、金星は影を落とすことができ、まれに、白昼の肉眼で見ることができます。",
+  "SolarSystemExploreEarth": "地球",
+  "SolarSystemExploreEarthDesc": "地球は太陽から3番目の惑星であり、生命を宿し、支えることが知られている唯一の天体です。地球の表面の約29.2％は、大陸と島からなる土地です。残りの70.8％は、主に海、海、湾、その他の塩水域で覆われていますが、湖、川、その他の淡水で覆われており、これらが一緒になって水圏を構成しています。",
+  "SolarSystemExploreMars": "火星",
+  "SolarSystemExploreMarsDesc": "火星は太陽から4番目の惑星であり、太陽系で2番目に小さい惑星であり、水星だけよりも大きくなっています。英語では、火星はローマの戦争の神の名前を持っており、しばしば赤い惑星と呼ばれています。",
+  "SolarSystemExploreJupiter": "木星",
+  "SolarSystemExploreJupiterDesc": "木星は太陽から5番目の惑星であり、太陽系で最大です。これは、太陽系の他のすべての惑星を合わせた質量の2.5倍を超える質量を持つ巨大ガスですが、太陽の質量の1000分の1をわずかに下回っています。",
+  "SolarSystemExploreSaturn": "土星",
+  "SolarSystemExploreSaturnDesc": "土星は太陽系の大きなガス巨人です。それは太陽から4番目の惑星であり、太陽系で最も密度の高い惑星です。土星は太陽から6番目の惑星であり、木星に次ぐ太陽系で2番目に大きい惑星です。それは地球の約9.5倍の平均半径を持つ巨大ガスです。",
+  "SolarSystemExploreUranus": "天王星",
+  "SolarSystemExploreUranusDesc": "天王星は太陽から7番目の惑星です。その名前は、ギリシャ神話によれば、アレス（火星）の曽祖父、ゼウス（木星）の祖父、クロノス（土星）の父であったギリシャの空の神、ウラノスにちなんでいます。",
+  "SolarSystemExploreNeptune": "ネプチューン",
+  "SolarSystemExploreNeptuneDesc": "海王星は、太陽から8番目で最も遠い太陽惑星です。太陽系では、直径で4番目に大きい惑星、3番目に大きい惑星、そして最も密度の高い巨大惑星です。地球の17倍の質量で、ほぼ双子の天王星よりわずかに重いです。",
+  "SolarSystemExploreClick": "詳細については、太陽または惑星をクリックしてください",
+
+  "funZoneTitle": "ファンゾーン",
+  "funZoneDesc": "休憩して楽しんでください",
+
+  "contactTilte": "すべてについて話しましょう!",
+  "contactHateEmail": "フォームが嫌いですか？を送信します",
+  "contactTextEmail": "Eメール",
+  "contactInstead": "代わりは.",
+  "contactFormName": "あなたの名前",
+  "contactFormEMail": "E-メール",
+  "contactFormMessage": "メッセージ",
+  "contactFormSendMessage": "メッセージを送る",
+
+  "404Title": "ページが見つかりません",
+  "404Lost": "ええとああ！あなたは宇宙で迷子になっているように見えます",
+  "404Earth": "地球をクリックしてホームページにアクセスします",
+
+  "footerWith": "",
+  "footerAnd": "と",
+  "footerBy": "に",
+  "footerMyName": "ハーシェルラックウォー"
 }
