--- a/src/locales/ru/translationRu.json
+++ b/src/locales/ru/translationRu.json
@@ -1,4 +1,82 @@
 {
   "langName": "Russian",
-  "navDropLang": "русский"
+  "navDropLang": "русский",
+
+  "navLinkHome": "Дом",
+  "navLinkLearn": "Учить",
+  "navLinkChat": "Чат",
+  "navLinkFunZone": "Зона развлечений",
+  "navLinkContact": "Контакт",
+  "navChangeLang": "Изменить язык",
+  "navSiteDetail": "Веб-платформа на основе AR для студентов",
+
+  "homeAbout": "SkillCept - это веб-платформа на основе AR, где студенты любого уровня подготовки могут посещать сайт и изучать различные концепции с помощью 3D-моделей, что упрощает и ускоряет их понимание. SkillCept может помочь студентам достичь лучших результатов за счет визуализации и полного погружения в предмет.",
+  "homeExplore": "Исследовать",
+  "homeOtherFeat": "Другие особенности",
+  "home3D": "Интерактивные 3D-модели",
+  "home3Ddetails": "Цифровые 3D-модели позволяют студентам визуализировать и задавать вопросы по различным темам; они укрепляют пространственные навыки, способствуют распознаванию студентами заранее изученных различных принципов в этой области и побуждают студентов думать о своих процессах и свойствах.",
+  "homeAR": "Учитесь с дополненной реальностью",
+  "homeARDetails": "Относительная целостность цифровых объектов дополненной реальности в реальном мире способствует интерактивности и взаимодействию. Это максимизирует способность студентов тратить свое время на изучение учебных предметов, сводя к минимуму время, затрачиваемое на обучение использованию новой технологии.",
+  "homeMultiLang": "Доступен на нескольких языках",
+  "homeMultiLangDetails": "Платформа доступна на нескольких языках для создания и признания культурной осведомленности, повышает академическую и образовательную ценность, способствует творчеству, адаптации в обществе и признанию местных языков.",
+
+  "learnCLassTitle": "Выберите свой класс",
+
+  "modelView": "Чтобы просмотреть 3D-модель в AR, отсканируйте QR-код или нажмите кнопку ниже.",
+  "modelViewInAR": "Посмотреть в AR",
+  "modelEarthTitle": "земля",
+  "modelEarthDetails": "Земля - ​​третья планета от Солнца и единственный астрономический объект, который, как известно, дает приют и поддерживает жизнь. Около 29,2% поверхности Земли - это суша, состоящая из континентов и островов. Остальные 70,8% покрыты водой, в основном океанами, морями, заливами и другими солеными водными объектами, но также озерами, реками и другими пресными водами, которые вместе составляют гидросферу. Большая часть полярных регионов Земли покрыта льдом. Внешний слой Земли разделен на несколько жестких тектонических плит, которые мигрируют по поверхности в течение многих миллионов лет, в то время как его внутренняя часть остается активной с внутренним твердым железным ядром, жидким внешним ядром, которое генерирует магнитное поле Земли, и конвективной мантией, которая движет плиту. тектоника.",
+  "modelSolarSystemTitle": "Солнечная система",
+  "modelSolarSyatemDetails": "Солнечная система - это гравитационно связанная система Солнца и объектов, которые вращаются вокруг него, прямо или косвенно. Из объектов, которые вращаются непосредственно вокруг Солнца, самыми большими являются восемь планет, а остальные - более мелкие, карликовые планеты и небольшие тела Солнечной системы. Из объектов, которые косвенно вращаются вокруг Солнца - естественных спутников - два больше самой маленькой планеты Меркурия. Солнечная система сформировалась 4,6 миллиарда лет назад в результате гравитационного коллапса гигантского межзвездного молекулярного облака. Подавляющая часть массы системы находится в Солнце, а большая часть остальной массы содержится в Юпитере. Четыре меньшие планеты внутренней системы, Меркурий, Венера, Земля и Марс, являются планетами земной группы и состоят в основном из камня и металла.",
+  "modelWaterTitle": "Вода (H2O)",
+  "modelWaterDetails": "Вода (химическая формула H2O) - неорганическое, прозрачное, безвкусное, без запаха и почти бесцветное химическое вещество, которое является основным компонентом гидросферы Земли и жидкостей всех известных живых организмов (в которых она действует как растворитель). Он жизненно важен для всех известных форм жизни, даже несмотря на то, что не содержит калорий или органических питательных веществ. Его химическая формула H2O указывает на то, что каждая из его молекул содержит один атом кислорода и два атома водорода, связанных ковалентными связями. Атомы водорода прикреплены к атому кислорода под углом 104,45 °. Вода - это название жидкого состояния H2O при стандартных условиях для температуры и давления.",
+  "modelChemGlassTitle": "Оборудование для химической лаборатории",
+  "modelChemGLaddDetails": "Пробирка, также известная как пробирка для культивирования или пробирка для образца, представляет собой обычный кусок лабораторной стеклянной посуды, состоящий из длинной стеклянной или прозрачной пластиковой трубки, напоминающей палец, открытой вверху и закрытой внизу. Пробирки обычно помещают в специальные штативы. В лабораторном оборудовании химический стакан обычно представляет собой цилиндрический контейнер с плоским дном. У большинства также есть небольшой носик (или клюв), чтобы облегчить выливание, как показано на рисунке.",
+  "modelDiscoverySpaceShuttleTitle": "Космический шаттл",
+  "modelDiscoverySpaceShuttleDetails": "Space Shuttle Discovery (обозначение орбитального аппарата: OV-103) - один из орбитальных аппаратов программы NASA Space Shuttle и третий из пяти полностью работающих орбитальных аппаратов, которые будут построены. Его первая миссия, STS-41-D, пролетела с 30 августа по 5 сентября 1984 года. За 27 лет службы он запускал и приземлялся 39 раз, совершив больше космических полетов, чем любой другой космический корабль на сегодняшний день. Ракета-носитель Space Shuttle состоит из трех основных компонентов: орбитального аппарата Space Shuttle, одноразового центрального топливного бака и двух многоразовых твердотопливных ракетных ускорителей.",
+  "modelPerseverance": "Упорство",
+  "modelPerseveranceDetails": "Миссия марсохода Mars Perseverance является частью программы NASA по исследованию Марса, долгосрочной программы роботизированного исследования Красной планеты. Миссия Mars Perseverance направлена ​​на решение высокоприоритетных научных целей исследования Марса, включая ключевые вопросы о возможностях жизни на Марсе. Миссия делает следующий шаг, не только ища признаки пригодных для жизни условий на Марсе в древнем прошлом, но и ища признаки самой прошлой микробной жизни. Марсоход Mars Perseverance представляет собой дрель, которая может собирать образцы керна наиболее многообещающих пород и почв и хранить их в тайнике на поверхности Марса.",
+  "modelSpaceStationTitle": "Международная космическая станция",
+  "modelSpaceStationDetails": "Международная космическая станция (МКС) - это модульная космическая станция (обитаемый искусственный спутник) на низкой околоземной орбите. Это многонациональный совместный проект с участием пяти космических агентств: НАСА (США), Роскосмоса (Россия), JAXA (Япония), ESA (Европа) и CSA (Канада). Право собственности на космическую станцию ​​и ее использование устанавливаются межправительственными договорами и соглашениями. Станция служит лабораторией исследования микрогравитации и космической среды, в которой проводятся научные исследования в области астробиологии, астрономии, метеорологии, физики и других областях.",
+
+  "SolarSystemExploreSun": "солнце",
+  "SolarSystemExploreSunDesc": "Солнце - звезда в центре Солнечной системы. Это почти идеальная сфера из горячей плазмы, нагретой до накала за счет ядерных реакций синтеза в ее ядре, излучающей энергию в основном в виде видимого света, ультрафиолетового и инфракрасного излучения. Это, безусловно, самый важный источник энергии для жизни на Земле.",
+  "SolarSystemExploreMercury": "Меркурий",
+  "SolarSystemExploreMercuryDesc": "Меркурий - самая маленькая планета в Солнечной системе и ближайшая к Солнцу. Его орбита вокруг Солнца занимает 87,97 земных дня, это самая короткая из всех планет Солнца. Он назван в честь римского бога Меркурия (Меркурия), бога торговли, посланника богов и посредника между богами и смертными, соответствующего греческому богу Гермесу (Ἑρμῆς).",
+  "SolarSystemExploreVenus": "Венера",
+  "SolarSystemExploreVenusDesc": "Венера - вторая планета от Солнца. Он назван в честь римской богини любви и красоты. Венера - самый яркий природный объект в ночном небе Земли после Луны, она может отбрасывать тени и в редких случаях может быть видна невооруженным глазом среди бела дня.",
+  "SolarSystemExploreEarth": "Земля",
+  "SolarSystemExploreEarthDesc": "Земля - ​​третья планета от Солнца и единственный астрономический объект, который, как известно, дает приют и поддерживает жизнь. Около 29,2% поверхности Земли - это суша, состоящая из континентов и островов. Остальные 70,8% покрыты водой, в основном океанами, морями, заливами и другими солеными водными объектами, но также озерами, реками и другими пресными водами, которые вместе составляют гидросферу.",
+  "SolarSystemExploreMars": "Марс",
+  "SolarSystemExploreMarsDesc": "Марс - четвертая планета от Солнца и вторая по величине планета в Солнечной системе, будучи крупнее Меркурия. На английском языке Марс носит имя римского бога войны и часто упоминается как Красная планета.",
+  "SolarSystemExploreJupiter": "Юпитер",
+  "SolarSystemExploreJupiterDesc": "Юпитер - пятая планета от Солнца и самая большая планета Солнечной системы. Это газовый гигант с массой более чем в два с половиной раза больше массы всех других планет Солнечной системы вместе взятых, но немногим меньше одной тысячной массы Солнца.",
+  "SolarSystemExploreSaturn": "Сатурн",
+  "SolarSystemExploreSaturnDesc": "Сатурн - крупный газовый гигант Солнечной системы. Это четвертая планета от Солнца и самая плотная планета в Солнечной системе. Сатурн - шестая планета от Солнца и вторая по величине в Солнечной системе после Юпитера. Это газовый гигант со средним радиусом примерно в девять с половиной раз больше, чем у Земли.",
+  "SolarSystemExploreUranus": "Уран",
+  "SolarSystemExploreUranusDesc": "Уран - седьмая планета от Солнца. Его имя является отсылкой к греческому богу неба Урану, который, согласно греческой мифологии, был прадедом Ареса (Марса), дедом Зевса (Юпитера) и отцом Кроноса (Сатурн).",
+  "SolarSystemExploreNeptune": "Нептун",
+  "SolarSystemExploreNeptuneDesc": "Нептун - восьмая и самая дальняя известная солнечная планета от Солнца. В Солнечной системе это четвертая по диаметру планета, третья по величине планета и самая плотная планета-гигант. Он в 17 раз больше массы Земли и немного массивнее, чем его близнец Уран.",
+  "SolarSystemExploreClick": "Нажмите на солнце или планеты для получения дополнительной информации.",
+
+  "funZoneTitle": "Зона развлечений",
+  "funZoneDesc": "Сделайте перерыв и повеселитесь",
+
+  "contactTilte": "Давайте поговорим обо всем!",
+  "contactHateEmail": "Формы ненависти? Отправить",
+  "contactTextEmail": "электронное письмо",
+  "contactInstead": "вместо.",
+  "contactFormName": "Ваше имя",
+  "contactFormEMail": "Электронная почта",
+  "contactFormMessage": "Сообщение",
+  "contactFormSendMessage": "Отправить сообщение",
+
+  "404Title": "Страница не найдена",
+  "404Lost": "УХ ОЙ! Похоже, вы потерялись в космосе",
+  "404Earth": "Нажмите на Землю, чтобы попасть на главную страницу",
+
+  "footerWith": "с",
+  "footerAnd": "и",
+  "footerBy": "по",
+  "footerMyName": "Гершель Раквар"
 }
